- Change body and related css so that body reflects height of actual content instead of 100% height. (might improve scroll performance on mobile) - Scroll to top of page on navigation - Fix media query in fonts css file

--- a/web/src/styles/global-fonts.css
+++ b/web/src/styles/global-fonts.css
@@ -40,7 +40,7 @@
   --font-title48-line-height: calc(64 / 48);
 
   /* @media (${DeviceWidth.mediaMaxSmall}) { */
-  @media ('max-width: 449px') {
+  @media (max-width: 449px) {
     --font-base-size: 1em; /* 16px */
     --font-base-line-height: calc(24 / var(--unit)); /* 24px */
 
